fine tune styling for program detail view, no weird overflow issue on resize of window.

--- a/app/assets/stylesheets/api/exercises.scss
+++ b/app/assets/stylesheets/api/exercises.scss
@@ -42,12 +42,14 @@
 .column-spacer {
   width: 36%;
   padding: 0 5px;
+  border-right: 1px solid transparent;
 }
 
 .tempo, .rest, .rpe, .exercise-small-column {
   text-align: center;
   font-size: 11px;
   padding: 0 5px;
+  border-right: 1px solid transparent;
 }
 
 .tempo {
